<resources>
    <string name="app_name">Timber</string>
    <string name="profile">Profile</string>
    <string name="connector">Hiker Connect</string>
    <string name="home">Home</string>
    <string name="recent">Recent Hikes</string>
    <string name="logout">Logout</string>
    <string name="nav_open">Open Menu</string>
    <string name="nav_close">Close Menu</string>
    <string name="editProfileBtn">Edit Profile</string>

    <string name="userName">Alphonse Elric</string>
    <string name="userEmail">alchemy@gmail.com</string>
    <string name="userLocation">Amestris</string>
    <string name="userDesc"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec ac semper ipsum. Proin venenatis orci vel augue iaculis placerat. Cras ut enim arcu. Ut lorem felis, accumsan nec luctus ut, dictum in turpis. Suspendisse sit amet diam in urna varius luctus nec ac massa. In sed posuere lectus. Fusce volutpat dignissim diam, eget venenatis odio condimentum quis.
Maecenas odio augue, faucibus eget risus id, consequat scelerisque augue. Ut dictum fermentum facilisis. Praesent malesuada sodales nunc. Pellentesque nec lorem justo. Suspendisse mollis est sed turpis imperdiet hendrerit. Etiam at mollis arcu. Vivamus sagittis pharetra porttitor. </string>
    <string name="hikeDesc">Pender Hill is located on the Sunshine Coast in Pender Harbour and is a short, steep hike that provides incredible views of the surrounding area. From various viewpoints near the top, the views include one looking down towards Hotel Lake, across to Mount Daniel, across Pender Harbour, and out towards the Strait of Georgia. </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">E-mail Address:</string>
    <string name="prompt_password">Password:</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="forgot">Forgotten password?</string>
    <string name="sign_up">Register</string>
    <string name="existing_account">Login with Existing Account</string>
    <string name="prompt_name">Name:</string>
    <string name="prompt_confirm">Confirm Password: </string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="upload_photo">Upload photo</string>
    <string name="review_hint">Review body text</string>
    <string name="reviews">Reviews</string>
    <string name="write_review">Write Your Own…</string>
    <string name="hikeLength">Length(km):</string>
    <string name="hikeTime">Time(hr):</string>
    <string name="hikeElevation">Elevation(m):</string>
    <string name="hikeSeason">Season:</string>
    <string name="hikeDog">Dog Friendly:</string>
    <string name="hikeCamp">Camping:</string>
    <string name="textMsgField">Type a message</string>
    <string name="startChat">Start Chat</string>
    <string name="markHiked">Mark Hiked</string>
</resources>