<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/mainMenu"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_recent_hike"
            android:title="@string/recent" />
        <item
            android:id="@+id/nav_connect"
            android:icon="@drawable/ic_connect"
            android:title="@string/connector" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
    </group>

    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout" />

</menu>