<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:background="@color/profile_grey"
        app:cardCornerRadius="5dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <GridLayout
                    android:id="@+id/profileContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:rowCount="3">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/profileImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_column="0"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        app:cardCornerRadius="100dp">

                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/pfp" />

                    </androidx.cardview.widget.CardView>

                    <GridLayout
                        android:layout_row="0"
                        android:layout_column="1"
                        android:layout_gravity="right"
                        android:columnCount="1"
                        android:rowCount="3">

                        <TextView
                            android:id="@+id/nameText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginTop="60dp"
                            android:layout_marginEnd="20dp"
                            android:text="@string/userName" />

                        <TextView
                            android:id="@+id/emailText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="20dp"
                            android:text="@string/userEmail" />

                        <TextView
                            android:id="@+id/locationText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginTop="5dp"
                            android:layout_marginEnd="20dp"
                            android:text="@string/userLocation" />

                    </GridLayout>

                    <TextView
                        android:id="@+id/userDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_columnSpan="2"
                        android:layout_margin="10dp"
                        android:text="@string/userDesc" />

                    <Button
                        android:id="@+id/editProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="2"
                        android:layout_columnSpan="2"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/teal_200"
                        android:text="@string/editProfileBtn" />

                </GridLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.cardview.widget.CardView>

</LinearLayout>