<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login"
        android:scaleType="centerCrop" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="30dp"
                    app:cardCornerRadius="30dp">

                    <ImageView
                        android:layout_width="125dp"
                        android:layout_height="125dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/logo" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/prompt_email"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/input_field_layout"
                    android:drawableStart="@drawable/ic_baseline_email_24"
                    android:drawablePadding="5dp"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/prompt_name"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/register_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/input_field_layout"
                    android:drawableStart="@drawable/ic_baseline_person_24"
                    android:drawablePadding="5dp"
                    android:inputType="textPersonName" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/prompt_password"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/input_field_layout"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="5dp"
                    android:inputType="textPassword" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/prompt_confirm"
                    android:textColor="@color/white" />

                <EditText
                    android:id="@+id/register_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/input_field_layout"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:drawablePadding="5dp"
                    android:inputType="textPassword" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <Button
                        android:id="@+id/registerBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="40dp"
                        android:paddingStart="40dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="40dp"
                        android:paddingBottom="10dp"
                        android:text="@string/sign_up" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/register_existing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="20dp"
                        android:clickable="true"
                        android:text="@string/existing_account"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        app:drawableStartCompat="@drawable/ic_baseline_arrow_right_24" />

                </RelativeLayout>


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</RelativeLayout>