<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reviewDrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ViewReview">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/reviewToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/profile_grey"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_margin="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="Pender Hill" />

            <EditText
                android:id="@+id/reviewText"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_marginTop="20dp"
                android:hint="@string/review_hint"
                android:gravity="top" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:rating="5" />

<!--            <Button-->
<!--                android:id="@+id/upload_photo_button"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/upload_photo"-->
<!--                android:layout_marginTop="10dp" />-->

<!--            <LinearLayout-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:orientation="horizontal"-->
<!--                android:layout_marginTop="5dp" >-->
<!--                <ImageButton-->
<!--                    android:layout_width="40dp"-->
<!--                    android:layout_height="40dp"-->
<!--                    android:visibility="visible" />-->

<!--                <ImageButton-->
<!--                    android:layout_width="40dp"-->
<!--                    android:layout_height="40dp"-->
<!--                    android:visibility="visible" />-->

<!--                <ImageButton-->
<!--                    android:layout_width="40dp"-->
<!--                    android:layout_height="40dp"-->
<!--                    android:visibility="visible" />-->

<!--                <ImageButton-->
<!--                    android:layout_width="40dp"-->
<!--                    android:layout_height="40dp"-->
<!--                    android:visibility="visible" />-->

<!--                <ImageButton-->
<!--                    android:layout_width="40dp"-->
<!--                    android:layout_height="40dp"-->
<!--                    android:visibility="visible" />-->
<!--            </LinearLayout>-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >
                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_alignParentLeft="true" />

                <Button
                    android:id="@+id/submit_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/reviewNavMenu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_user_profile_display"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>